Fixed innerHTML concat for reply

--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
     <p>Find out how long have you been clean from League</p>
     <input id="summoner-name" type="text" />
     <button id="search-button">Search</button>
-    <h2 id="reply">You have been clean since: </h2>
+    <h2>You have been clean since: <span id="reply"></span></h2>
     <h2>That is <span id="reply-days"> </span> day/days</h2>
     <script src="../public/js/main.js"></script>
 </body>
